# Omni-tierWeb

./: README.md  metadata.json
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  MediaPipelineEngine.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/core/: AutonomousTaskAgentService.kt  MicroVMEngineController.kt
app/src/main/java/com/example/data/: CacheAllocationDao.kt  SessionEntity.kt  VaultDatabase.kt
app/src/main/java/com/example/download/: LegendaryDownloadService.kt
app/src/main/java/com/example/media/: MediaPipelineEngine.kt  NeuralUpscaler.kt
app/src/main/java/com/example/network/: VpnRoutingManager.kt
app/src/main/java/com/example/security/: VaultRepository.kt  VpnRoutingManager.kt
app/src/main/java/com/example/ui/: AWOEScaffold.kt  AWOETheme.kt  EngineStateViewModel.kt  MediaEnhancementStudio.kt  OmniWebView.kt  PrivacyArmorUI.kt  QuickPrivacyPanel.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: engine_controller.rs  network_shielder.rs
app/src/test/java/com/example/: ExampleRobolectricTest.kt
